unpackaged/main/default/objects/Engagement_Created__e/Engagement_Created__e.object-meta.xml
<CustomObject>
    <description>This event is fired off whenever an Engagement is Created</description>
    <label>Engagement Created</label>
    <pluralLabel>Engagements Created</pluralLabel>
</CustomObject>