unpackaged/main/default/objects/Engagement_Created__e/fields/Engagement_Code__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Code__c</fullName>
    <label>Engagement Code</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>