unpackaged/main/default/objects/Engagement_Created__e/fields/Engagement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_End_Date__c</fullName>
    <label>Engagement End Date</label>
    <type>DateTime</type>
</CustomField>