unpackaged/main/default/objects/Engagement_Created__e/fields/Engagement_Name__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Name__c</fullName>
    <label>Engagement Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>