unpackaged/main/default/objects/Engagement_Created__e/fields/Engagement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Start_Date__c</fullName>
    <label>Engagement Start Date</label>
    <type>DateTime</type>
</CustomField>